--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "prisma": "^5.5.2",
     "sqlite3": "^5.1.6"
   }
